assets/scss/core/_base.scss
html, body {
    position: relative;

    overflow-y: hidden;
    overflow-x: hidden;

    overscroll-behavior-y: none;
    overscroll-behavior-block: none;
    
    &.isScrollEnable {
        overflow-y: scroll;
    }
    
    color: $white;
    background-color: $darkGrey;
    font-family: $regular;
}

.js-scroll-content {
    width: 100%;
}

@media (min-width: 1680px) {
    
}

